--- a/assets/css/3-sections/connect.sass
+++ b/assets/css/3-sections/connect.sass
@@ -1,6 +1,6 @@
 section.connect
   background:
-    image: url(/assets/img/McGillFourSeasons.jpg)
+    image: url(../img/McGillFourSeasons.jpg)
     size: cover
     position: center
   .title
@@ -15,7 +15,7 @@ section.connect
     .linkedIn
       +hide-text
       background:
-        image: url(/assets/img/linkedInSquare.png)
+        image: url(../img/linkedInSquare.png)
         size: contain
         repeat: no-repeat
         position: center
@@ -24,7 +24,7 @@ section.connect
     .github
       +hide-text
       background:
-        image: url(/assets/img/githubSquare.png)
+        image: url(../img/githubSquare.png)
         size: contain
         repeat: no-repeat
         position: center
@@ -33,7 +33,7 @@ section.connect
     .instagram
       +hide-text
       background:
-        image: url(/assets/img/Instagram-v051916.png)
+        image: url(../img/Instagram-v051916.png)
         size: contain
         repeat: no-repeat
         position: center
@@ -42,7 +42,7 @@ section.connect
     .email
       +hide-text
       background:
-        image: url(/assets/img/email.png)
+        image: url(../img/email.png)
         size: contain
         repeat: no-repeat
         position: center
