Images Fixed For Live Website

--- a/assets/css/3-sections/projects.sass
+++ b/assets/css/3-sections/projects.sass
@@ -15,12 +15,12 @@ section.projects
       span
         font-size: 20px
         font-weight: bolder
-        
+
   .hus_gameplan
     text-align: center
     +hide-text
     background:
-      image: url(/assets/img/hus_gameplan.png)
+      image: url(../img/hus_gameplan.png)
       size: contain
       repeat: no-repeat
     height: 100px
