--- a/assets/css/3-sections/resume.sass
+++ b/assets/css/3-sections/resume.sass
@@ -15,7 +15,7 @@ section.resume
   .resumePic
     +hide-text
     background:
-      image: url(/assets/img/resume.png)
+      image: url(../img/resume.png)
       size: contain
       repeat: no-repeat
       position: center
