--- a/assets/css/3-sections/welcome.sass
+++ b/assets/css/3-sections/welcome.sass
@@ -4,7 +4,7 @@ section.welcome
     padding: 60px
 
   background:
-    image: url(/assets/img/nic.jpg)
+    image: url(../img/nic.jpg)
     size: cover
     repeat: no-repeat
     position: center
