--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -459,7 +459,7 @@ a:hover, a:focus {
     text-indent: 101%;
     white-space: nowrap;
     max-width: 135px;
-    background-image: url(/assets/img/logony_futura.png);
+    background-image: url(../img/logony_futura.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
@@ -568,7 +568,7 @@ a:hover, a:focus {
         transform: translateY(10%); } }
 
 section.welcome {
-  background-image: url(/assets/img/nic.jpg);
+  background-image: url(../img/nic.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center; }
@@ -598,7 +598,7 @@ section.resume {
     overflow: hidden;
     text-indent: 101%;
     white-space: nowrap;
-    background-image: url(/assets/img/resume.png);
+    background-image: url(../img/resume.png);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
@@ -684,7 +684,7 @@ section.projects {
     overflow: hidden;
     text-indent: 101%;
     white-space: nowrap;
-    background-image: url(/assets/img/hus_gameplan.png);
+    background-image: url(../img/hus_gameplan.png);
     background-size: contain;
     background-repeat: no-repeat;
     height: 100px; }
