--- a/assets/css/3-sections/header.sass
+++ b/assets/css/3-sections/header.sass
@@ -19,7 +19,7 @@
       +hide-text
       max-width: 135px
       background:
-        image: url(/assets/img/logony_futura.png)
+        image: url(../img/logony_futura.png)
         repeat: no-repeat
         position: center
         size: contain
