Updated path for JS

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,9 +12,9 @@
 
     </head>
     <body id = "top">
-      
+
       {{ content }}
-      <script src="/assets/js/functions.js"></script>
+      <script src="assets/js/functions.js"></script>
 
 
 
