--- a/_pugfiles/about.pug
+++ b/_pugfiles/about.pug
@@ -1,6 +1,6 @@
 section.about#about
   .newSection.columnsCentered
     .col-2
-      p I hold a computer science degree from McGill University, where I trained as an elite athlete. My hobbies include rowing, cooking, and photography. In June 2017, I will begin the Corporate Residency MBA program at Dalhousie’s Rowe School of Business. #[a(href="https://www.dal.ca/academics/programs/graduate/corporate_residency_mba.html") Corporate Residency MBA program at Dalhousie’s Rowe School of Business].
+      p I hold a computer science degree from McGill University, where I trained as an elite athlete. My hobbies include rowing, cooking, and photography. In June 2017, I will begin the  #[a(href="https://www.dal.ca/academics/programs/graduate/corporate_residency_mba.html") Corporate Residency MBA program at Dalhousie’s Rowe School of Business].
     .col-2
-      p  Ultimately, I intend to leverage my computer science skills to help businesses make smart, data-driven decisions. In the past years, I've anchored successful teams at school, at work, on the court, on the water, and in my community. I'll bring that high-level of leadership, drive, and ability to deliver to the next team I join.
+      p  Ultimately, I intend to leverage my computer science skills to help businesses make smart, data-driven decisions. In the past years, I've anchored successful teams at school, at work, on the court, on the water, and in my community. I'll bring that high-level leadership, drive, and ability to deliver to the next team I join.
