--- a/_pugfiles/resume.pug
+++ b/_pugfiles/resume.pug
@@ -3,7 +3,7 @@ section.resume#resume
     .col-2
       a(href="/assets/pdf/Yantzi-Nic_Resume.pdf")
         h1.resumePic Resume
-        p Click for a PDF copy.
+        p.caption Click for a PDF copy.
     .col-half
       .resumeHighlights
         h3.highlight Resume Highlights:
