--- a/assets/css/3-sections/resume.sass
+++ b/assets/css/3-sections/resume.sass
@@ -1,9 +1,10 @@
 section.resume
   background: $background-color-three
   color: $light-color-text
-  text-align: center
+  text-align: left
 
-
+  .highlight, .caption
+    text-align: center
   a
     color: lighten($light-color-text, 20%)
 
