--- a/assets/css/3-sections/resume.sass
+++ b/assets/css/3-sections/resume.sass
@@ -3,6 +3,9 @@ section.resume
   color: $light-color-text
   text-align: left
 
+  .highlight
+    padding: 0
+
   .highlight, .caption
     text-align: center
   a
@@ -31,4 +34,4 @@ section.resume
   .resumeHighlights
     ul
       li
-        margin-bottom: 30px
+        margin-bottom: 15px
