--- a/assets/css/3-sections/resume.sass
+++ b/assets/css/3-sections/resume.sass
@@ -26,9 +26,8 @@ section.resume
       padding: 0
       margin: 0
     height: 300px
-    transition: all 1s ease-in-out
 
-    &:hover
+    &:hover &:focus
       transform: rotate(-365deg)
 
   .resumeHighlights
