V2 - Functional on Mobile and Desktop
Removed animation on resume.

--- a/assets/css/3-sections/resume.sass
+++ b/assets/css/3-sections/resume.sass
@@ -27,7 +27,7 @@ section.resume
       margin: 0
     height: 300px
 
-    &:hover &:focus
+    //&:hover &:focus
       transform: rotate(-365deg)
 
   .resumeHighlights
