--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,2 @@
-<section class="footer" id="footer"><div class="newSection columnsCentered"><div class="col-1 footerContent"><div class="email-link"><a class="email-link" href="mailto:nic.yantzi@dal.ca">Click Here to Email Me</a></div><h2 class="backToTop"><a href="#top">Back To The Top</a></h2></div></div></section>
+<section class="footer" id="footer"><div class="newSection columnsCentered"><div class="col-1 footerContent"><!--.email-linka(href="mailto:nic.yantzi@dal.ca").email-link Click Here to Email Me
+--><h2 class="backToTop"><a href="#top">Back To The Top</a></h2></div></div></section>
