--- a/_pugfiles/footer.pug
+++ b/_pugfiles/footer.pug
@@ -2,7 +2,7 @@ section.footer#footer
 
   .newSection.columnsCentered
     .col-1.footerContent
-      .email-link
+      //.email-link
         a(href="mailto:nic.yantzi@dal.ca").email-link Click Here to Email Me
 
       h2.backToTop #[a(href="#top") Back To The Top]
