--- a/_pugfiles/projects.pug
+++ b/_pugfiles/projects.pug
@@ -2,7 +2,7 @@ section.projects#projects
   .newSection.columnsCentered
     .col-1
       h1.title Projects
-      h3.caption (viewable on #[a(href="https://github.com/nicyantzi") Github])
+      h3.caption (Viewable on #[a(href="https://github.com/nicyantzi") Github])
 
 
 
