--- a/assets/css/3-sections/projects.sass
+++ b/assets/css/3-sections/projects.sass
@@ -10,8 +10,9 @@ section.projects
     padding: 0 0 10px 0
 
   ul
+    margin: 10px 0px
     li
-      margin-bottom: 20px
+      padding: 15px 0
       span
         font-size: 20px
         font-weight: bolder
@@ -23,4 +24,8 @@ section.projects
       image: url(../img/hus_gameplan.png)
       size: contain
       repeat: no-repeat
-    height: 100px
+    height: 80px
+
+@media(max-width: 600px)
+  .hus_gameplan
+    margin-bottom: -15px
