--- a/assets/css/3-sections/connect.sass
+++ b/assets/css/3-sections/connect.sass
@@ -1,6 +1,6 @@
 section.connect
   background:
-    image: url(../img/McGillFourSeasons.jpg)
+    image: url(../img/McGillFourSeasons.gif)
     size: cover
     position: center
   .title
