--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -613,7 +613,7 @@ section.resume {
     margin-bottom: 15px; }
 
 section.connect {
-  background-image: url(../img/McGillFourSeasons.jpg);
+  background-image: url(../img/McGillFourSeasons.gif);
   background-size: cover;
   background-position: center; }
   section.connect .title {
