--- a/_pugfiles/resume.pug
+++ b/_pugfiles/resume.pug
@@ -1,7 +1,7 @@
 section.resume#resume
   .newSection.columnsCentered
     .col-2
-      a(href="/assets/pdf/Yantzi-Nic_Resume.pdf")
+      a(href="../pdf/Yantzi-Nic_Resume.pdf")
         h1.resumePic Resume
         p.caption Click for a PDF copy.
     .col-half
