--- a/assets/css/3-sections/resume.sass
+++ b/assets/css/3-sections/resume.sass
@@ -28,7 +28,7 @@ section.resume
     height: 300px
     transition: all 1s ease-in-out
 
-    &:hover , &:focus
+    &:hover , &:active
       transform: rotate(-365deg)
 
   .resumeHighlights
