--- a/assets/css/3-sections/connect.sass
+++ b/assets/css/3-sections/connect.sass
@@ -52,5 +52,5 @@ section.connect
     .github, .instagram, .email, .linkedIn
       transition: all 0.4s ease-in-out
 
-      &:hover , &:focus
+      &:hover , &:active
         transform: scale(1.3)
