--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -610,7 +610,7 @@ section.resume {
     background-margin: 0;
     height: 300px;
     transition: all 1s ease-in-out; }
-    section.resume .resumePic:hover, section.resume .resumePic:focus {
+    section.resume .resumePic:hover, section.resume .resumePic:active {
       -ms-transform: rotate(-365deg);
           transform: rotate(-365deg); }
   section.resume .resumeHighlights ul li {
@@ -665,7 +665,7 @@ section.connect {
       height: 134px; }
     section.connect .networks .github, section.connect .networks .instagram, section.connect .networks .email, section.connect .networks .linkedIn {
       transition: all 0.4s ease-in-out; }
-      section.connect .networks .github:hover, section.connect .networks .github:focus, section.connect .networks .instagram:hover, section.connect .networks .instagram:focus, section.connect .networks .email:hover, section.connect .networks .email:focus, section.connect .networks .linkedIn:hover, section.connect .networks .linkedIn:focus {
+      section.connect .networks .github:hover, section.connect .networks .github:active, section.connect .networks .instagram:hover, section.connect .networks .instagram:active, section.connect .networks .email:hover, section.connect .networks .email:active, section.connect .networks .linkedIn:hover, section.connect .networks .linkedIn:active {
         -ms-transform: scale(1.3);
             transform: scale(1.3); }
 
