--- a/assets/css/3-sections/connect.sass
+++ b/assets/css/3-sections/connect.sass
@@ -49,8 +49,8 @@ section.connect
       height: 134px
 
 
-    .github, .instagram, .email, .linkedIn
+    //.github, .instagram, .email, .linkedIn
       transition: all 0.4s ease-in-out
 
-      &:hover , &:active
+      //&:hover , &:active
         transform: scale(1.3)
