--- a/assets/css/3-sections/resume.sass
+++ b/assets/css/3-sections/resume.sass
@@ -26,9 +26,9 @@ section.resume
       padding: 0
       margin: 0
     height: 300px
-    transition: all 1s ease-in-out
+    //transition: all 1s ease-in-out
 
-    &:hover , &:active
+    //&:focus
       transform: rotate(-365deg)
 
   .resumeHighlights
