--- a/_pugfiles/projects.pug
+++ b/_pugfiles/projects.pug
@@ -8,7 +8,7 @@ section.projects#projects
 
       ul
 
-        li #[span This website] is built from scratch. I used PUG and SASS and developed my own #[a(href="https://github.com/nicyantzi/Simple-Website-Starter-Kit") website starter/development kit] using Gulp and BrowserSync.
+        li #[span This website] is built from scratch. I used PUG and SASS and developed my own #[a(href="http://nicyantzi.com/Simple-Website-Starter-Kit/") website starter/development kit] using Gulp and BrowserSync.
         li #[span Artificial Intelligence Project]. Created an agent to compete against other students in my class using various AI techniques. Developed an evaluation function that was used to determine the state of a gameboard at various depths in a game tree using minimax and alpha-beta pruning. You can read my #[a(href="assets/pdf/Yantzi_COMP424_HusFinalReport.pdf") project summary here].
         .hus_gameplan Gameplan
         li #[span Databases Project]. Made an Application using Eclipses Application Design Tools to query and update our group project database (PostgreSQL) containing various customers, employees, beers and transactions (both b2b and b2c).
