--- a/_pugfiles/about.pug
+++ b/_pugfiles/about.pug
@@ -1,6 +1,6 @@
 section.about#about
   .newSection.columnsCentered
     .col-2
-      p I am an MBA student with a focus on enterprise analytics at Dalhousie University in the #[a(href="https://www.dal.ca/academics/programs/graduate/corporate_residency_mba.html") Corporate Residency program within the Rowe School of Business]. I hold a Bachelor of Science in Computer Science from McGill University, where I was a member of the men’s basketball team and later the Row to Podium program. My hobbies include rowing, cooking, and photography. 
+      p I am an MBA student with a focus on enterprise analytics at Dalhousie University in the  #[a(href="https://www.dal.ca/academics/programs/graduate/corporate_residency_mba.html") Corporate Residency program]. I hold a Bachelor of Science in Computer Science from McGill University, where I was a member of the men’s basketball team and later the Row to Podium program. My hobbies include rowing, cooking, and photography.
     .col-2
       p  Ultimately, I intend to leverage my computer science skills to help businesses make smart, data-driven decisions. In the past years, I've anchored successful teams at school, at work, on the court, on the water, and in my community. I'll bring that high-level leadership, drive, and ability to deliver to the next team I join.
