--- a/_pugfiles/resume.pug
+++ b/_pugfiles/resume.pug
@@ -8,7 +8,6 @@ section.resume#resume
       .resumeHighlights
         h3.highlight Resume Highlights:
         ul
-          li BSc Computer Science (Minor in Interdisciplinary Life Sciences), McGill University, 2016
-          li Athlete with #[a(href="http://www.rowtopodium.ca/") Row to Podium], Canada's official talent identification and development program for rowing, 2014–2016
-          li President, #[a(href="https://www.facebook.com/McGillCulinarySociety") McGill Culinary Society], 2014-2016
-          li Member of the McGill Redmen Varsity Men's Basketball Team, 2011-2014
+          li Developed strong analytical aptitude and problem-solving skills while studying Computer Science, intent on helping businesses make smart, intelligent data-driven decisions
+          li Demonstrated, and improved; grit, resilience, commitment, and time management skills as an elite athlete in multiple sports while balancing full time studies or working
+          li Provided superior customer service for six months in a sales environment, effectively shared product knowledge and developed rapport with customers to consistently exceed monthly sales targets
