--- a/assets/css/3-sections/connect.sass
+++ b/assets/css/3-sections/connect.sass
@@ -48,6 +48,14 @@ section.connect
         position: center
       height: 134px
 
+    .twitter
+      +hide-text
+      background:
+        image: url(../img/Twitter.png)
+        size: contain
+        repeat: no-repeat
+        position: center
+      height: 128px
 
     //.github, .instagram, .email, .linkedIn
       transition: all 0.4s ease-in-out
