--- a/assets/css/3-sections/resume.sass
+++ b/assets/css/3-sections/resume.sass
@@ -19,7 +19,7 @@ section.resume
   .resumePic
     +hide-text
     background:
-      image: url(../img/resume.gif)
+      image: url(../img/resume.png)
       size: contain
       repeat: no-repeat
       position: center
