--- a/assets/css/4-layouts/home.sass
+++ b/assets/css/4-layouts/home.sass
@@ -51,6 +51,11 @@
     padding: 0 10px
     box-sizing: border-box
 
+  .col-5
+    width: 128px
+    padding: 0 10px
+    box-sizing: border-box
+
   .col-half
     width: 50%
     padding: 0 20px
@@ -80,6 +85,9 @@
       .col-half
         width: auto
         padding: 1px 20px
+      .col-5
+        width: auto
+        margin-bottom: 40px
 
 
 
