--- a/_pugfiles/connect.pug
+++ b/_pugfiles/connect.pug
@@ -4,15 +4,18 @@ section.connect#connect
       .col-1
         h2 Let's Connect!
   .newSection.columnsSpaced.networks
-      .col-4
+      .col-5
         a(href="https://ca.linkedin.com/in/nicyantzi")
           h2.linkedIn linkedIn
-      .col-4
+      .col-5
         a(href="https://github.com/nicyantzi")
           h2.github Github
-      .col-4
+      .col-5
         a(href="https://www.instagram.com/nicyantzi/")
           h2.instagram Instagram
-      .col-4
+      .col-5
+        a(href="https://twitter.com/nicyantzi")
+          h2.twitter Twitter
+      .col-5
         a(href="mailto:nic.yantzi@dal.ca")
           h2.email Email
