--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -68,7 +68,8 @@ figure {
  * 2. Show the overflow in Edge and IE.
  */
 hr {
-  box-sizing: content-box;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
   /* 1 */
   height: 0;
   /* 1 */
@@ -114,7 +115,8 @@ abbr[title] {
   /* 1 */
   text-decoration: underline;
   /* 2 */
-  text-decoration: underline dotted;
+  -webkit-text-decoration: underline dotted;
+          text-decoration: underline dotted;
   /* 2 */ }
 
 /**
@@ -291,7 +293,8 @@ fieldset {
  *    `fieldset` elements in all browsers.
  */
 legend {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   /* 1 */
   color: inherit;
   /* 2 */
@@ -326,7 +329,8 @@ textarea {
  */
 [type="checkbox"],
 [type="radio"] {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   /* 1 */
   padding: 0;
   /* 2 */ }
@@ -448,12 +452,16 @@ a:hover, a:focus {
     left: 10px;
     bottom: 20px;
     width: 135px;
+    display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -ms-flex-direction: column;
-        flex-direction: column;
-    -ms-flex-pack: justify;
-        justify-content: space-between; }
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between; }
   .home-wrap header .logo {
     overflow: hidden;
     text-indent: 101%;
@@ -485,8 +493,9 @@ a:hover, a:focus {
     width: 50px;
     height: 50px;
     margin-right: 30px;
-    -ms-flex-align: center;
-        align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     cursor: pointer; }
     .home-wrap header .mobile-nav-toggle:selection {
       background: transparent; }
@@ -501,6 +510,8 @@ a:hover, a:focus {
       width: 100%;
       background: #1B2631;
       position: relative;
+      -webkit-transition: all 0.4s ease-in-out;
+      -o-transition: all 0.4s ease-in-out;
       transition: all 0.4s ease-in-out; }
     .home-wrap header .mobile-nav-toggle span:before {
       top: 16px; }
@@ -510,14 +521,17 @@ a:hover, a:focus {
       background: transparent; }
     .home-wrap header .mobile-nav-toggle.is-open span:before,
     .home-wrap header .mobile-nav-toggle.is-open span:after {
-      -ms-transform-origin: center;
-          transform-origin: center;
-      -ms-transform: rotate(45deg);
-          transform: rotate(45deg);
+      -webkit-transform-origin: center;
+          -ms-transform-origin: center;
+              transform-origin: center;
+      -webkit-transform: rotate(45deg);
+          -ms-transform: rotate(45deg);
+              transform: rotate(45deg);
       top: 0; }
     .home-wrap header .mobile-nav-toggle.is-open span:before {
-      -ms-transform: rotate(-45deg);
-          transform: rotate(-45deg); }
+      -webkit-transform: rotate(-45deg);
+          -ms-transform: rotate(-45deg);
+              transform: rotate(-45deg); }
 
 .home-wrap .mobile-nav {
   display: none;
@@ -525,6 +539,8 @@ a:hover, a:focus {
   width: 100%;
   background: #E8F6F3;
   padding: 70px 0 30px;
+  -webkit-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out; }
   .home-wrap .mobile-nav a {
     color: #1B2631; }
@@ -550,22 +566,27 @@ a:hover, a:focus {
       top: auto;
       bottom: auto;
       left: auto;
-      -ms-flex-direction: row;
-          flex-direction: row;
-      -ms-flex-align: center;
-          align-items: center; }
+      -webkit-box-orient: horizontal;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: row;
+              flex-direction: row;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center; }
     .home-wrap header .site-nav,
     .home-wrap header .email-link {
       display: none; }
     .home-wrap header .logo {
       height: 70px; }
     .home-wrap header .mobile-nav-toggle {
+      display: -webkit-box;
       display: -ms-flexbox;
       display: flex; }
   .home-wrap .mobile-nav.is-open {
     display: block;
-    -ms-transform: translateY(10%);
-        transform: translateY(10%); } }
+    -webkit-transform: translateY(10%);
+        -ms-transform: translateY(10%);
+            transform: translateY(10%); } }
 
 section.welcome {
   background-image: url(../img/nic.jpg);
@@ -602,7 +623,7 @@ section.resume {
     overflow: hidden;
     text-indent: 101%;
     white-space: nowrap;
-    background-image: url(../img/resume.gif);
+    background-image: url(../img/resume.png);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
@@ -659,6 +680,15 @@ section.connect {
       background-repeat: no-repeat;
       background-position: center;
       height: 134px; }
+    section.connect .networks .twitter {
+      overflow: hidden;
+      text-indent: 101%;
+      white-space: nowrap;
+      background-image: url(../img/Twitter.png);
+      background-size: contain;
+      background-repeat: no-repeat;
+      background-position: center;
+      height: 128px; }
 
 section.projects {
   background: #F7DC6F; }
@@ -708,12 +738,15 @@ section.footer {
 
 @media (max-width: 800px) {
   section.footer {
+    display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -ms-flex-pack: center;
-        justify-content: center; } }
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center; } }
 
 .home-wrap {
+  display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   min-height: 100vh; }
@@ -722,49 +755,66 @@ section.footer {
       display: block; } }
 
 .home-sections {
-  -ms-flex: 1;
-      flex: 1; }
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1; }
   .home-sections section {
     padding: 40px 0; }
   .home-sections .newSection {
+    display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -ms-flex-direction: rows;
-        flex-direction: rows; }
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: rows;
+            flex-direction: rows; }
   .home-sections .columnsCentered {
-    -ms-flex-pack: center;
-        justify-content: center; }
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center; }
   .home-sections .columnsSpaced {
     -ms-flex-pack: distribute;
         justify-content: space-around; }
   .home-sections .stackTop {
-    -ms-flex-order: 1;
-        order: 1; }
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1; }
   .home-sections .col-headline {
     width: 55%;
     padding: 0 15px;
-    box-sizing: border-box; }
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box; }
   .home-sections .col-1 {
     max-width: 640px;
     padding: 0 10px;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     width: 100%; }
   .home-sections .col-2 {
     width: 320px;
     padding: 0 20px;
-    box-sizing: border-box; }
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box; }
   .home-sections .col-3 {
     width: 213px;
     padding: 0 10px;
-    box-sizing: border-box; }
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box; }
   .home-sections .col-4 {
     width: 160px;
     padding: 0 10px;
-    box-sizing: border-box; }
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box; }
+  .home-sections .col-5 {
+    width: 128px;
+    padding: 0 10px;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box; }
   .home-sections .col-half {
     width: 50%;
     padding: 0 20px;
-    box-sizing: border-box; }
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box; }
 
 @media (max-width: 640px) {
   .home-sections section {
@@ -781,7 +831,10 @@ section.footer {
       margin-bottom: 40px; }
     .home-sections .newSection .col-half {
       width: auto;
-      padding: 1px 20px; } }
+      padding: 1px 20px; }
+    .home-sections .newSection .col-5 {
+      width: auto;
+      margin-bottom: 40px; } }
 
 @media (max-width: 425px) {
   .home-sections section {
