--- a/_pugfiles/welcome.pug
+++ b/_pugfiles/welcome.pug
@@ -1,6 +1,7 @@
 section.welcome#welcome
   .newSection.columnsCentered
     .col-headline
-      .home-lead
-        h1 Hello! My name is Nic Yantzi.
+      .bottom
+        .home-lead
+          h1 Hello! My name is Nic Yantzi.
     .col-2
