--- a/assets/css/3-sections/welcome.sass
+++ b/assets/css/3-sections/welcome.sass
@@ -1,14 +1,14 @@
 section.welcome
 
   section
-    padding: 60px
+    padding: 300px
 
   background:
-    image: url(../img/nic.jpg)
+    image: url(../img/YantziNic.jpg)
     size: cover
     repeat: no-repeat
-    position: center
+    position: top
 
   .home-lead
-    padding: 60px 0
+    padding: 40px 0
     color: $welcome-headline-color
