--- a/assets/css/4-layouts/home.sass
+++ b/assets/css/4-layouts/home.sass
@@ -25,9 +25,16 @@
   .stackTop
     order: 1
 
+  .bottom
+    position: relative
+    top: -100%
+    transform: translateY(95%)
+    display: block
+
   .col-headline
-    width: 55%
-    padding: 0 15px
+    width: 85%
+    padding: 50px 15px
+    margin: 200px 0px
     box-sizing: border-box
 
   .col-1
