--- a/_includes/welcome.html
+++ b/_includes/welcome.html
@@ -1,1 +1,1 @@
-<section class="welcome" id="welcome"><div class="newSection columnsCentered"><div class="col-headline"><div class="home-lead"><h1>Hello! My name is Nic Yantzi.</h1></div></div><div class="col-2"></div></div></section>
+<section class="welcome" id="welcome"><div class="newSection columnsCentered"><div class="col-headline"><div class="bottom"><div class="home-lead"><h1>Hello! My name is Nic Yantzi.</h1></div></div></div><div class="col-2"></div></div></section>
