--- a/_pugfiles/header2.pug
+++ b/_pugfiles/header2.pug
@@ -1,17 +1,13 @@
 mixin nav-content()
   ul
-    li: a(href="#welcome") Welcome
-    li: a(href="#blogSample") My Blog
-    li: a(href="#about") About Me
-    li: a(href="#resume") Resume
-    li: a(href="#projects") Projects
-    li: a(href="#connect") Let's Connect
+    li: a(href="index.html") Home
+
 
 .mobile-nav
   +nav-content()
 
 
-header
+header2
   .header-position
 
     h1.logo Nic Yantzi
