--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -588,6 +588,153 @@ a:hover, a:focus {
         -ms-transform: translateY(10%);
             transform: translateY(10%); } }
 
+.home-wrap header2 {
+  width: 160px;
+  background: #F7DC6F;
+  padding: 30px 0;
+  margin: 0; }
+  .home-wrap header2 .header-position {
+    position: fixed;
+    top: 20px;
+    left: 10px;
+    bottom: 20px;
+    width: 135px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between; }
+  .home-wrap header2 .logo {
+    overflow: hidden;
+    text-indent: 101%;
+    white-space: nowrap;
+    max-width: 135px;
+    background-image: url(../img/logony_futura.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    height: 135px;
+    padding: 0;
+    margin: 0; }
+  .home-wrap header2 .site-nav ul {
+    list-style: none;
+    margin: 20px 0;
+    padding: 0 5px 0 0;
+    text-align: right; }
+    .home-wrap header2 .site-nav ul li {
+      margin-bottom: 20px;
+      font-weight: bold; }
+      .home-wrap header2 .site-nav ul li:last-child {
+        margin-bottom: 0; }
+  .home-wrap header2 .email-link {
+    display: block;
+    text-align: right;
+    padding: 0 5px 15px 0; }
+  .home-wrap header2 .mobile-nav-toggle {
+    display: none;
+    width: 50px;
+    height: 50px;
+    margin-right: 30px;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    cursor: pointer; }
+    .home-wrap header2 .mobile-nav-toggle:selection {
+      background: transparent; }
+    .home-wrap header2 .mobile-nav-toggle:-moz-selection {
+      background: transparent; }
+    .home-wrap header2 .mobile-nav-toggle span,
+    .home-wrap header2 .mobile-nav-toggle span:before,
+    .home-wrap header2 .mobile-nav-toggle span:after {
+      content: "";
+      display: block;
+      height: 3px;
+      width: 100%;
+      background: #1B2631;
+      position: relative;
+      -webkit-transition: all 0.4s ease-in-out;
+      -o-transition: all 0.4s ease-in-out;
+      transition: all 0.4s ease-in-out; }
+    .home-wrap header2 .mobile-nav-toggle span:before {
+      top: 16px; }
+    .home-wrap header2 .mobile-nav-toggle span:after {
+      top: -18px; }
+    .home-wrap header2 .mobile-nav-toggle.is-open span {
+      background: transparent; }
+    .home-wrap header2 .mobile-nav-toggle.is-open span:before,
+    .home-wrap header2 .mobile-nav-toggle.is-open span:after {
+      -webkit-transform-origin: center;
+          -ms-transform-origin: center;
+              transform-origin: center;
+      -webkit-transform: rotate(45deg);
+          -ms-transform: rotate(45deg);
+              transform: rotate(45deg);
+      top: 0; }
+    .home-wrap header2 .mobile-nav-toggle.is-open span:before {
+      -webkit-transform: rotate(-45deg);
+          -ms-transform: rotate(-45deg);
+              transform: rotate(-45deg); }
+
+.home-wrap .mobile-nav {
+  display: none;
+  position: absolute;
+  width: 100%;
+  background: #F7DC6F;
+  padding: 70px 0 30px;
+  -webkit-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out; }
+  .home-wrap .mobile-nav a {
+    color: #1B2631; }
+    .home-wrap .mobile-nav a:hover, .home-wrap .mobile-nav a:active {
+      color: #1A5276; }
+  .home-wrap .mobile-nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0; }
+  .home-wrap .mobile-nav li {
+    text-align: right;
+    margin-right: 30px;
+    margin-bottom: 15px;
+    font-size: 26px; }
+
+@media (max-width: 800px) {
+  .home-wrap header {
+    width: auto;
+    padding: 20px 0; }
+    .home-wrap header .header-position {
+      width: auto;
+      position: relative;
+      top: auto;
+      bottom: auto;
+      left: auto;
+      -webkit-box-orient: horizontal;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: row;
+              flex-direction: row;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center; }
+    .home-wrap header .site-nav,
+    .home-wrap header .email-link {
+      display: none; }
+    .home-wrap header .logo {
+      height: 70px; }
+    .home-wrap header .mobile-nav-toggle {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex; }
+  .home-wrap .mobile-nav.is-open {
+    display: block;
+    -webkit-transform: translateY(10%);
+        -ms-transform: translateY(10%);
+            transform: translateY(10%); } }
+
 section.welcome {
   background-image: url(../img/YantziNic.jpg);
   background-size: cover;
@@ -597,7 +744,8 @@ section.welcome {
     padding: 300px; }
   section.welcome .home-lead {
     padding: 40px 0;
-    color: #E8F6F3; }
+    color: #E8F6F3;
+    font-size: 120%; }
 
 section.about {
   color: #EAECEE;
@@ -606,6 +754,10 @@ section.about {
     color: #c0c6cc; }
   section.about a:hover, section.about a:focus {
     color: #616d78; }
+
+section.home-sections {
+  background-color: #1A5276;
+  margin: 8px; }
 
 section.resume {
   background: #7B241C;
@@ -754,11 +906,27 @@ section.footer {
     .home-wrap {
       display: block; } }
 
+.posts > .post {
+  padding-bottom: 2em;
+  border-bottom: 1px solid lightGray; }
+
+.posts > .post:last-child {
+  padding-bottom: 1em;
+  border-bottom: none; }
+
+.post .blockquote {
+  margin: 1.8em .8em;
+  border-left: 2px solid gray;
+  padding: 0.1em 1em;
+  color: gray;
+  font-size: 22px;
+  font-style: italic; }
+
 .home-sections {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1; }
-  .home-sections section {
+  .home-sections .section {
     padding: 40px 0; }
   .home-sections .newSection {
     display: -webkit-box;
@@ -787,8 +955,8 @@ section.footer {
             transform: translateY(95%);
     display: block; }
   .home-sections .col-headline {
-    width: 85%;
-    padding: 50px 15px;
+    width: 70%;
+    padding: 0 40px 0 10px;
     margin: 200px 0px;
     -webkit-box-sizing: border-box;
             box-sizing: border-box; }
@@ -831,7 +999,7 @@ section.footer {
     display: block; }
     .home-sections .newSection .col-headline {
       width: 65%;
-      padding: 0 20px 0 0; }
+      padding: 0 40px 40px 10px; }
     .home-sections .newSection .col-2 {
       width: auto; }
     .home-sections .newSection .col-4 {
